--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,15 @@
     "@aws-sdk/client-textract": "^3.496.0",
     "@aws-sdk/node-http-handler": "^3.374.0",
     "aws-sdk": "^2.1542.0",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
+    "firebase": "^10.10.0",
+    "firebase-admin": "^12.0.0",
     "fs": "0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3"
   }
