--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dompurify": "^3.0.9",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.10.0",
     "html-react-parser": "^5.1.8",
     "htmlparser2": "^9.1.0",
     "levenshtein-edit-distance": "^3.0.1",
