--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:8080",
@@ -18,6 +18,7 @@
     "react-html5-camera-photo": "^1.5.11",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
+    "serve": "^14.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
